<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.don.storyApp.presentation.MainActivity">
    <item
        android:id="@+id/action_change_language"
        android:orderInCategory="100"
        android:title="@string/action_language"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_story"
        android:orderInCategory="100"
        android:title="@string/action_add_story"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_map"
        android:orderInCategory="100"
        android:title="@string/action_map"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_log_out"
        android:orderInCategory="100"
        android:title="@string/action_log_out"
        app:showAsAction="never" />
</menu>