<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/login_fragment">

    <fragment
        android:id="@+id/login_fragment"
        android:name="com.don.storyApp.presentation.login.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_fragment_to_register_fragment"
            app:destination="@id/register_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />

        <action
            android:id="@+id/action_login_fragment_to_stories_fragment"
            app:destination="@id/stories_fragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left" />
    </fragment>

    <fragment
        android:id="@+id/register_fragment"
        android:name="com.don.storyApp.presentation.register.RegisterFragment"
        android:label="@string/register_fragment_label"
        tools:layout="@layout/fragment_register" />

    <fragment
        android:id="@+id/stories_fragment"
        android:name="com.don.storyApp.presentation.stories.StoriesFragment"
        android:label="@string/stories_fragment_label"
        tools:layout="@layout/fragment_stories">

        <action
            android:id="@+id/action_stories_fragment_to_detail_fragment"
            app:destination="@id/detail_fragment">
            <argument
                android:name="key_story"
                app:argType="com.don.storyApp.domain.model.Story" />
        </action>
    </fragment>

    <fragment
        android:id="@+id/detail_fragment"
        android:name="com.don.storyApp.presentation.detail.DetailFragment"
        android:label="@string/detail_fragment_label"
        tools:layout="@layout/fragment_detail">
        <argument
            android:name="key_story"
            app:argType="com.don.storyApp.domain.model.Story" />
    </fragment>

    <fragment
        android:id="@+id/add_story_fragment"
        android:name="com.don.storyApp.presentation.add_story.AddStoryFragment"
        android:label="@string/add_story_fragment_label"
        tools:layout="@layout/fragment_add_story"/>

    <fragment
        android:id="@+id/map_fragment"
        android:name="com.don.storyApp.presentation.map.MapFragment"
        android:label="@string/add_story_fragment_label"
        tools:layout="@layout/fragment_map"/>

    <action
        android:id="@+id/action_general_to_add_story_fragment"
        app:destination="@id/add_story_fragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left" />
    <action
        android:id="@+id/action_general_to_nav_graph"
        app:destination="@id/nav_graph"
        app:popUpTo="@id/login_fragment"
        app:popUpToInclusive="true" />
    <action
        android:id="@+id/action_general_to_map_fragment"
        app:destination="@id/map_fragment"
        app:enterAnim="@anim/slide_in_right"
        app:exitAnim="@anim/slide_out_left" />
</navigation>