<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/md_teal_600"
    android:padding="@dimen/widget_margin"
    android:theme="@style/Theme.StoryApp.AppWidgetContainer">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="horizontal"
        android:padding="@dimen/widget_margin"
        android:weightSum="9">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:padding="16dp"
            android:scaleType="fitCenter"
            android:src="@drawable/ic_switch_camera" />
        <TextView
            android:id="@+id/appwidget_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:contentDescription="@string/appwidget_text"
            android:gravity="center"
            android:text="@string/random"
            android:textColor="#ffffff"
            android:textSize="15sp"
            android:textStyle="bold|italic" />
        <Button
            android:id="@+id/btn_click"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="3"
            android:text="@string/generate"
            android:textColor="@android:color/white" />
    </LinearLayout>
</RelativeLayout>