<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <data>

        <import type="com.don.storyApp.util.StateType" />

        <import type="com.don.storyApp.util.ValidationType" />


        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.don.storyApp.presentation.register.RegisterViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/md_grey_500"
        android:orientation="vertical"
        tools:context=".presentation.register.RegisterFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{vm.stateType == StateType.CONTENT || vm.stateType == StateType.ERROR ? View.VISIBLE : View.GONE}">

            <com.don.storyApp.util.CustomTextInputLayout
                android:id="@+id/til_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_16dp"
                android:hint="@string/input_name"
                app:layout_constraintBottom_toTopOf="@+id/til_email"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:validationType="@{ValidationType.DEFAULT}">

                <com.don.storyApp.util.CustomTextInputEditText
                    android:id="@+id/ed_register_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:text="@={vm.name}" />
            </com.don.storyApp.util.CustomTextInputLayout>

            <com.don.storyApp.util.CustomTextInputLayout
                android:id="@+id/til_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginBottom="@dimen/_8dp"
                android:hint="@string/input_email"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:validationType="@{ValidationType.EMAIL}">

                <com.don.storyApp.util.CustomTextInputEditText
                    android:id="@+id/ed_register_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"
                    android:text="@={vm.email}" />
            </com.don.storyApp.util.CustomTextInputLayout>


            <com.don.storyApp.util.CustomTextInputLayout
                android:id="@+id/til_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/_8dp"
                android:hint="@string/input_password"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guideline"
                app:validationType="@{ValidationType.PASSWORD}">

                <com.don.storyApp.util.CustomTextInputEditText
                    android:id="@+id/ed_register_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:text="@={vm.password}" />
            </com.don.storyApp.util.CustomTextInputLayout>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                style="@style/Button.Primary"
                android:layout_marginHorizontal="@dimen/_16dp"
                android:layout_marginTop="@dimen/_32dp"
                android:enabled="@{vm.isButtonEnabled()}"
                android:text="@string/register"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/til_password" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/view_loading"
            layout="@layout/view_state_loading"
            android:visibility="@{vm.stateType == StateType.LOADING ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </LinearLayout>
</layout>
